# pesuelogit

./: .gitignore  LICENCE  README.md  README.rst  gisuelogit.yml  pesuelogit-linux.yml  pesuelogit.yml  pyproject.toml  requirements.txt  setup.py
examples/notebooks/: aesue-fresno.ipynb  aesue-tntp-experiments.ipynb  aesue-tntp.ipynb  eda-fresno.ipynb  estimation-fresno.ipynb  experiments-siouxfalls.ipynb  gisuelogit-fresno-eda.ipynb  gisuelogit-fresno-visualizations.ipynb  gisuelogit-fresno.ipynb  gisuelogit-siouxfalls-visualizations.ipynb  gisuelogit-siouxfalls.ipynb  pesuelogit-fresno.ipynb  plots-gisuelogit-fresno.ipynb  plots-gisuelogit-siouxfalls.ipynb  sensitivity-experiments-siouxfalls.ipynb  sensitivity-odlulpe-fresno.ipynb  sensitivity-tvodlulpe-fresno.ipynb
examples/notebooks/extra/: eda-results-fresno.ipynb  experiments-siouxfalls-trc.ipynb
examples/scripts/: aesue-fresno.py  aesue-tntp-experiments.py  aesue-tntp.py  estimation-fresno.py  experiments-tntp.py  gisuelogit-fresno.py  gisuelogit-tntp.py  odlue-tntp.py  pesuelogit-tntp.py  read-write-fresno-data.py  simulate-suelogit-data.py  ueae-tntp.py
src/aesuelogit/: aesue.py  descriptive_statistics.py  etl.py  experiments.py  models.py  networks.py  visualizations.py
src/gisuelogit/: descriptive_statistics.py  etl.py  experiments.py  models.py  visualizations.py
src/pesuelogit/: __init__.py  descriptive_statistics.py  etl.py  experiments.py  models.py  networks.py  visualizations.py
tests/: test_aesuelogit.py  test_gisuelogit.py  test_pesuelogit.py
(+576 files in other folders)
