[tool.poetry]
name = "aesuelogit"
version = "0.1.0"
description = ""
authors = ["Pablo Guarda <pablo.guarda.r@gmail.com >", "Matt Battifarano <matthew.battifarano@gmail.com>", ]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
tensorflow = "2.9.0"
protobuf="3.20.1"
isuelogit = {git = "https://github.com/pabloguarda/isuelogit"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
